refactor: optimize OWASPEvaluator processing pipeline
Refactors the monolithic index matching loop into a declarative, functional
Java stream architecture. Introduces a safe tuple record to protect position-based
array extraction, handles edge cases for null severe states, and enhances overall code clarity.